--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.16.0
   provider: ^4.3.2+4
   lint:
+  bubble: ^1.1.9+1
 
 dev_dependencies:
   flutter_test:
