--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
   cloud_firestore: ^0.16.0
+  firebase_messaging: ^5.1.5
   provider: ^4.3.2+4
   lint:
   bubble: ^1.1.9+1
